allure report from maven execution should looks the same as from IDE